--- a/src/mygpsx/ListCellPriority.fxml
+++ b/src/mygpsx/ListCellPriority.fxml
@@ -6,13 +6,12 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutY="6.0" text="Уровень" />
       <Label layoutX="56.0" layoutY="6.0" text="Описание" />
-      <TextField alignment="CENTER" layoutX="7.0" layoutY="25.0" prefHeight="25.0" prefWidth="38.0" />
-      <TextField layoutX="56.0" layoutY="25.0" prefHeight="25.0" prefWidth="208.0" />
-      <Button layoutX="267.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" text="DEL" />
+      <TextField fx:id="fxTxtNumberPriority" alignment="CENTER" layoutX="7.0" layoutY="25.0" prefHeight="25.0" prefWidth="38.0" />
+      <TextField fx:id="fxTxtNamePriority" layoutX="56.0" layoutY="25.0" prefHeight="25.0" prefWidth="208.0" />
+      <Button fx:id="fxBtnDeletePriority" layoutX="267.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" text="DEL" />
    </children>
 </AnchorPane>
