--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -62,8 +62,8 @@
             <content>
               <AnchorPane prefWidth="200.0">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. статусов задач" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                        <Button fx:id="btnSettingsPriorityEdit" layoutX="10.0" layoutY="44.0" mnemonicParsing="false" onAction="#FrameSettingsPrioritetsEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. приоритетов задач" textFill="RED" />
+                        <Button fx:id="btnSettingsStatusEdit" mnemonicParsing="false" onAction="#FrameSettingsStatusEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. статусов задач" textFill="RED" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <Button fx:id="btnSettingsPriorityEdit" layoutX="10.0" layoutY="44.0" mnemonicParsing="false" onAction="#FrameSettingsPrioritetsEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. приоритетов задач" textFill="BLUE" />
                         <Button layoutX="10.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. типов задач" />
                         <Button layoutX="10.0" layoutY="114.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. атрибутов задач" />
                         <Button layoutX="10.0" layoutY="148.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. типовых описаний" />
@@ -73,7 +73,7 @@
           </TitledPane>
         </panes>
       </Accordion>
-      <AnchorPane fx:id="fxMessageWait" maxHeight="212.0" maxWidth="200.0" minHeight="150.0" minWidth="200.0" prefHeight="212.0" prefWidth="200.0" style="-fx-background-color: #1ac61f; visibility: false;">
+      <AnchorPane fx:id="fxMessageWait" maxHeight="212.0" maxWidth="232.0" minHeight="150.0" minWidth="200.0" prefHeight="212.0" prefWidth="232.0" style="-fx-background-color: #1ac61f; visibility: false;" AnchorPane.leftAnchor="240.0" AnchorPane.topAnchor="35.0">
          <children>
             <Label fx:id="fxLbMessage" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="1.0" prefHeight="150.0" prefWidth="200.0" text="ОЖИДАНИЕ ЗАГРУЗКИ..." textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
