--- a/src/mygpsx/FXStatusEdit.fxml
+++ b/src/mygpsx/FXStatusEdit.fxml
@@ -4,10 +4,10 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="357.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CPriorityEditController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="357.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CStatusEditController">
    <children>
       <Label layoutX="8.0" layoutY="6.0" text="Список статусов:" />
       <ListView fx:id="fxListViewStatus" layoutX="8.0" layoutY="34.0" prefHeight="189.0" prefWidth="343.0" />
-      <Button fx:id="fxBtnAddStatus" layoutX="179.0" layoutY="2.0" mnemonicParsing="false" onAction="#FrameAddStatus" text="Добавить приоритет задачи" />
+      <Button fx:id="fxBtnAddStatus" layoutX="205.0" layoutY="2.0" mnemonicParsing="false" onAction="#FrameAddStatus" text="Добавить статус задачи" />
    </children>
 </AnchorPane>
