--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -62,9 +62,9 @@
             <content>
               <AnchorPane prefWidth="200.0">
                      <children>
-                        <Button fx:id="btnSettingsStatusEdit" mnemonicParsing="false" onAction="#FrameSettingsStatusEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. статусов задач" textFill="RED" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <Button fx:id="btnSettingsStatusEdit" mnemonicParsing="false" onAction="#FrameSettingsStatusEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. статусов задач" textFill="BLUE" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                         <Button fx:id="btnSettingsPriorityEdit" layoutX="10.0" layoutY="44.0" mnemonicParsing="false" onAction="#FrameSettingsPrioritetsEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. приоритетов задач" textFill="BLUE" />
-                        <Button layoutX="10.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. типов задач" />
+                        <Button layoutX="10.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. типов задач" textFill="RED" />
                         <Button layoutX="10.0" layoutY="114.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. атрибутов задач" />
                         <Button layoutX="10.0" layoutY="148.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Ред. типовых описаний" />
                      </children>
