--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -67,7 +67,7 @@
                         <Button fx:id="btnSettingsTypejobEdit" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#FrameSettingsTypejobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. типов задач" textFill="BLUE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                         <Button fx:id="btnSettingsAttrjobEdit" layoutX="10.0" layoutY="114.0" mnemonicParsing="false" onAction="#FrameSettingsAttrjobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. атрибутов задач" textFill="BLUE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                         <Button fx:id="btnSettingsTypedescjobEdit" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#FrameSettingsTypedescjobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. типовых описаний" textFill="BLUE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                        <Button layoutX="10.0" layoutY="183.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="196.0" text="Ред. типов объектов" textFill="RED" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                        <Button fx:id="btnSettingsTypeobjEdit" layoutX="10.0" layoutY="183.0" mnemonicParsing="false" onAction="#FrameSettingsTypeobjEdit" prefHeight="25.0" prefWidth="196.0" text="Ред. типов объектов" textFill="RED" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                         <Button fx:id="btnSettingsAttrobjEdit" layoutX="10.0" layoutY="215.0" mnemonicParsing="false" onAction="#FrameSettingsAttrobjEdit" text="Ред. атрибутов объектов" textFill="BLUE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                      </children>
                   </AnchorPane>
