--- a/src/mygpsx/FXAttrjobAdd.fxml
+++ b/src/mygpsx/FXAttrjobAdd.fxml
@@ -4,10 +4,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="76.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CAttrjobAddController">
+<AnchorPane fx:id="fxAPaneMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="76.0" prefWidth="314.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CAttrjobAddController">
    <children>
       <Button fx:id="fxBtnDeleteTypejob" layoutX="196.0" layoutY="50.0" mnemonicParsing="false" onAction="#AddAttrjob" text="Добавить атрибут" />
       <TextField fx:id="fxTxtNumberAttrjob" layoutY="2.0" prefHeight="25.0" prefWidth="100.0" promptText="Введите тип" />
       <TextField fx:id="fxTxtNameAttrjob" layoutX="109.0" layoutY="2.0" prefHeight="25.0" prefWidth="202.0" promptText="Введите название атрибута задачи" />
+      <ComboBox fx:id="fxCboxTypeAttrs" layoutY="50.0" prefWidth="150.0" promptText="Выберите тип" />
    </children>
 </AnchorPane>
