--- a/src/mygpsx/FXAttrjobEdit.fxml
+++ b/src/mygpsx/FXAttrjobEdit.fxml
@@ -8,6 +8,6 @@
    <children>
       <Label layoutX="8.0" layoutY="6.0" text="Список атрибутов задач:" />
       <ListView fx:id="fxListViewAttrjob" layoutX="8.0" layoutY="34.0" prefHeight="189.0" prefWidth="343.0" />
-      <Button fx:id="fxBtnAddAttrjob" layoutX="195.0" layoutY="2.0" mnemonicParsing="false" onAction="#FrameAddAttrjob" text="Добавить атирбут задачи" />
+      <Button fx:id="fxBtnAddAttrjob" layoutX="195.0" layoutY="2.0" mnemonicParsing="false" onAction="#FrameAddAttrjob" text="Добавить атрибут задачи" />
    </children>
 </AnchorPane>
