--- a/src/mygpsx/FXCreateTemplate.fxml
+++ b/src/mygpsx/FXCreateTemplate.fxml
@@ -4,9 +4,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.FXCreateTemplateCtrl">
    <children>
-      <Button layoutX="504.0" layoutY="14.0" mnemonicParsing="false" text="+ Cущность" />
+      <Button fx:id="fxBtnAddAttribute" layoutX="504.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnOpenFrameWithAttributes" text="+ Cущность" AnchorPane.rightAnchor="10.0" />
+      <ListView fx:id="fxListTmplJob" layoutX="14.0" layoutY="45.0" prefHeight="200.0" prefWidth="571.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <Label layoutX="14.0" layoutY="18.0" text="ШАБЛОН ЗАДАЧИ" AnchorPane.leftAnchor="10.0" />
+      <Button fx:id="fxBtnCloseFrame" layoutX="452.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnCloseFrame" text="Сохранить шаблон" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <TextField fx:id="fxTxtNameTmplJob" layoutX="120.0" layoutY="14.0" />
+      <Label fx:id="fxLbErrorSaveTmplJob" layoutX="279.0" layoutY="18.0" prefHeight="17.0" prefWidth="226.0" text="Label" textFill="RED" />
    </children>
 </AnchorPane>
