--- a/src/mygpsx/ListCellAttrjob.fxml
+++ b/src/mygpsx/ListCellAttrjob.fxml
@@ -10,9 +10,10 @@
    <children>
       <Label layoutY="6.0" text="Уровень" />
       <Label layoutX="56.0" layoutY="6.0" text="Описание" />
-      <TextField fx:id="fxTxtNumberAttrjob" alignment="CENTER" layoutX="7.0" layoutY="25.0" prefHeight="25.0" prefWidth="38.0" />
-      <TextField fx:id="fxTxtNameAttrjob" layoutX="56.0" layoutY="25.0" prefHeight="25.0" prefWidth="208.0" />
-      <Button fx:id="fxBtnDeleteAttrjob" layoutX="267.0" layoutY="25.0" mnemonicParsing="false" onAction="#BtnDeleteAttrjob" prefHeight="25.0" prefWidth="38.0" text="DEL" />
+      <TextField fx:id="fxTxtNumberAttrjob" alignment="CENTER" layoutX="7.0" layoutY="25.0" prefHeight="25.0" prefWidth="38.0" AnchorPane.bottomAnchor="0.0" />
+      <TextField fx:id="fxTxtNameAttrjob" layoutX="56.0" layoutY="25.0" prefHeight="25.0" prefWidth="208.0" AnchorPane.bottomAnchor="0.0" />
+      <Button fx:id="fxBtnDeleteAttrjob" layoutX="267.0" layoutY="25.0" mnemonicParsing="false" onAction="#BtnDeleteAttrjob" prefHeight="25.0" prefWidth="45.0" text="DEL" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Label fx:id="fxLbUniqueID" text="Label" visible="false" />
+      <Button fx:id="fxBtnAddAttrjobIntoTmpl" mnemonicParsing="false" onAction="#BtnAddAttrjobIntoTmpl" prefHeight="25.0" prefWidth="45.0" text="ADD" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
