--- a/src/mygpsx/ListCellAttrjob.fxml
+++ b/src/mygpsx/ListCellAttrjob.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CListCellAttrjobController">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CListCellAttrjobController">
    <children>
       <Label layoutY="6.0" text="Уровень" />
       <Label layoutX="56.0" layoutY="6.0" text="Описание" />
@@ -15,5 +15,7 @@
       <Button fx:id="fxBtnDeleteAttrjob" layoutX="267.0" layoutY="25.0" mnemonicParsing="false" onAction="#BtnDeleteAttrjob" prefHeight="25.0" prefWidth="45.0" text="DEL" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Label fx:id="fxLbUniqueID" text="Label" visible="false" />
       <Button fx:id="fxBtnAddAttrjobIntoTmpl" mnemonicParsing="false" onAction="#BtnAddAttrjobIntoTmpl" prefHeight="25.0" prefWidth="45.0" text="ADD" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Label layoutX="127.0" layoutY="6.0" text="Высота^" textFill="BLUE" />
+      <TextField fx:id="fxTxtHeight" alignment="CENTER" layoutX="184.0" layoutY="2.0" prefHeight="25.0" prefWidth="45.0" text="55" />
    </children>
 </AnchorPane>
