--- a/src/mygpsx/FXPreviewTemplateJob.fxml
+++ b/src/mygpsx/FXPreviewTemplateJob.fxml
@@ -4,4 +4,4 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane fx:id="fxAPaneTmplMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane fx:id="fxAPaneTmplMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CFXPreviewTemplateCtrl"/>
