--- a/src/mygpsx/LPSMapTUserAndJobs.fxml
+++ b/src/mygpsx/LPSMapTUserAndJobs.fxml
@@ -10,7 +10,9 @@
 
 <AnchorPane id="fxAPaneMain" fx:id="fxAPaneMain" prefHeight="556.0" prefWidth="750" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CTUsersJobsController">
    <children>
-                           <Label layoutX="63.0" layoutY="33.0" text="Выбор сотрудника" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-                           <ComboBox fx:id="fxCbSelectUser" layoutX="113.0" layoutY="6.0" prefWidth="250.0" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="10.0" />
+                           <Label layoutX="63.0" layoutY="33.0" text="Выбор сотрудника:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                           <ComboBox fx:id="fxCbSelectUser" layoutX="162.0" layoutY="6.0" prefHeight="25.0" prefWidth="260.0" AnchorPane.leftAnchor="162.0" AnchorPane.topAnchor="6.0" />
+      <Label layoutX="14.0" layoutY="85.0" text="Выбрать шаблон задачи:" AnchorPane.leftAnchor="10.0" />
+      <ComboBox fx:id="fxCbSelectTamplateJob" layoutX="162.0" layoutY="81.0" prefHeight="25.0" prefWidth="260.0" />
    </children>
  </AnchorPane>
