--- a/src/mygpsx/LPSMapTUserAndJobs.fxml
+++ b/src/mygpsx/LPSMapTUserAndJobs.fxml
@@ -14,5 +14,8 @@
                            <ComboBox fx:id="fxCbSelectUser" layoutX="162.0" layoutY="6.0" prefHeight="25.0" prefWidth="260.0" AnchorPane.leftAnchor="162.0" AnchorPane.topAnchor="6.0" />
       <Label layoutX="14.0" layoutY="85.0" text="Выбрать шаблон задачи:" AnchorPane.leftAnchor="10.0" />
       <ComboBox fx:id="fxCbSelectTamplateJob" layoutX="162.0" layoutY="81.0" prefHeight="25.0" prefWidth="260.0" AnchorPane.topAnchor="80.0" />
+      <Label layoutX="10.0" layoutY="129.0" text="ПРИОРИТЕТ ЗАДАЧИ:" />
+      <ComboBox fx:id="fxCbSelectPriorityJob" layoutX="162.0" layoutY="125.0" prefHeight="25.0" prefWidth="260.0" />
+      <Button fx:id="fxBtnAddingJobNew" layoutX="430.0" layoutY="125.0" mnemonicParsing="false" onAction="#BtnAddingJobNew" text="Добавить задачу?" />
    </children>
  </AnchorPane>
