--- a/src/mygpsx/FXCellIntoTmplFilling.fxml
+++ b/src/mygpsx/FXCellIntoTmplFilling.fxml
@@ -6,13 +6,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CIntoTmplCtrl">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CIntoTmplFillingCtrl">
    <children>
       <Label fx:id="fxLb1" layoutY="6.0" text="Уровень" />
       <Label fx:id="fxLb2" layoutX="56.0" layoutY="6.0" text="Описание" />
       <TextField fx:id="fxTxtNumberAttrjob" alignment="CENTER" layoutX="7.0" layoutY="25.0" prefHeight="25.0" prefWidth="38.0" AnchorPane.bottomAnchor="0.0" />
       <TextField fx:id="fxTxtNameAttrjob" layoutX="56.0" layoutY="25.0" prefHeight="25.0" prefWidth="208.0" AnchorPane.bottomAnchor="0.0" />
-      <Button fx:id="fxBtnDeleteAttrjob" layoutX="267.0" layoutY="25.0" mnemonicParsing="false" onAction="#BtnDeleteAttrjob" prefHeight="25.0" prefWidth="45.0" text="DEL" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Button fx:id="fxBtnDeleteAttrjob" layoutX="264.0" layoutY="5.0" mnemonicParsing="false" onAction="#BtnDeleteAttrjob" prefHeight="25.0" prefWidth="45.0" text="DEL" visible="false" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="1.0" />
       <Label fx:id="fxLbUniqueID" text="Label" textFill="RED" />
    </children>
 </AnchorPane>
