Reprogramming templates very best!

--- a/src/mygpsx/FXCellIntoTmplFilling.fxml
+++ b/src/mygpsx/FXCellIntoTmplFilling.fxml
@@ -6,13 +6,25 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CIntoTmplFillingCtrl">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CIntoTmplCtrl">
    <children>
-      <Label fx:id="fxLb1" layoutY="6.0" text="Уровень" />
-      <Label fx:id="fxLb2" layoutX="56.0" layoutY="6.0" text="Описание" />
-      <TextField fx:id="fxTxtNumberAttrjob" alignment="CENTER" layoutX="7.0" layoutY="25.0" prefHeight="25.0" prefWidth="38.0" AnchorPane.bottomAnchor="0.0" />
-      <TextField fx:id="fxTxtNameAttrjob" layoutX="56.0" layoutY="25.0" prefHeight="25.0" prefWidth="208.0" AnchorPane.bottomAnchor="0.0" />
-      <Button fx:id="fxBtnDeleteAttrjob" layoutX="264.0" layoutY="5.0" mnemonicParsing="false" onAction="#BtnDeleteAttrjob" prefHeight="25.0" prefWidth="45.0" text="DEL" visible="false" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="1.0" />
-      <Label fx:id="fxLbUniqueID" text="Label" textFill="RED" />
+      <AnchorPane fx:id="fxAPaneLabel" prefHeight="60.0" prefWidth="700.0" style="-fx-border-color: red;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label fx:id="fxLbAPaneLabel" layoutX="7.0" layoutY="7.0" prefHeight="17.0" prefWidth="476.0" text="Label" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="fxAPaneTextField" prefHeight="60.0" prefWidth="200.0" style="-fx-border-color: red;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
+         <children>
+            <TextField fx:id="fxTxtAPaneField" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="fxAPaneTextArea" prefHeight="60.0" prefWidth="200.0" style="-fx-border-color: red;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
+         <children>
+            <TextArea fx:id="fxTxtAPaneArea" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
+      <Label fx:id="fxLbTypeControl" text="TypeControl" textFill="BLUE" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+      <Label fx:id="fxLb1" text="Уровень" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+      <Label fx:id="fxLbUniqueID" text="fxLbUniqueID" textFill="RED" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
