Adding sort up in edit template!

--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -83,7 +83,7 @@
           </TitledPane>
         </panes>
       </Accordion>
-      <AnchorPane fx:id="fxMessageWait" maxHeight="212.0" maxWidth="232.0" minHeight="150.0" minWidth="200.0" prefHeight="212.0" prefWidth="232.0" style="-fx-background-color: #1ac61f; visibility: false;" AnchorPane.leftAnchor="240.0" AnchorPane.topAnchor="35.0">
+      <AnchorPane fx:id="fxMessageWait" maxHeight="212.0" maxWidth="232.0" minHeight="150.0" minWidth="200.0" prefHeight="212.0" prefWidth="232.0" style="-fx-background-color: #1ac61f; visibility: false;" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
          <children>
             <Label fx:id="fxLbMessage" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="1.0" prefHeight="150.0" prefWidth="200.0" text="ОЖИДАНИЕ ЗАГРУЗКИ..." textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
