--- a/src/mygpsx/FXAddShip.fxml
+++ b/src/mygpsx/FXAddShip.fxml
@@ -13,7 +13,7 @@
       <TextField fx:id="fxLbNameShip" layoutX="14.0" layoutY="28.0" prefHeight="22.0" prefWidth="192.0" promptText="Введите название судна" />
       <TextField fx:id="fxLbDirectorShip" layoutX="14.0" layoutY="73.0" prefHeight="22.0" prefWidth="192.0" promptText="Ответственное лицо ФИО" />
       <Label layoutX="14.0" layoutY="103.0" text="Краткое описание судна" />
-      <TextArea fx:id="fxTaShortDescriptionShip" layoutX="14.0" layoutY="124.0" prefHeight="200.0" prefWidth="192.0" promptText="Введите краткое описание судна..." />
+      <TextArea fx:id="fxTaShortDescriptionShip" layoutX="14.0" layoutY="120.0" prefHeight="204.0" prefWidth="192.0" promptText="Введите краткое описание судна..." />
       <Button layoutX="535.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnInsertStartCoords" prefHeight="30.0" prefWidth="167.0" text="Ввести координаты" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
       <Pane layoutX="423.0" layoutY="50.0" prefHeight="55.0" prefWidth="167.0" style="-fx-border-color: blue;">
          <children>
@@ -28,5 +28,12 @@
             <Font size="12.0" />
          </font>
       </Label>
+      <TextField fx:id="fxTxtEmail" layoutX="216.0" layoutY="28.0" prefHeight="25.0" prefWidth="192.0" promptText="\@Введите email" />
+      <Label layoutX="216.0" layoutY="14.0" text="Email для авторизации:" />
+      <Label layoutX="216.0" layoutY="59.0" text="Введите пароль:" />
+      <PasswordField fx:id="fxTxtPassFirst" layoutX="216.0" layoutY="73.0" prefHeight="25.0" prefWidth="192.0" promptText="#############" />
+      <Label layoutX="216.0" layoutY="103.0" text="Подтвердите пароль:" />
+      <PasswordField fx:id="fxTxtPassSecond" layoutX="216.0" layoutY="120.0" prefHeight="25.0" prefWidth="192.0" promptText="#############" />
+      <Label fx:id="fxLbSuccessPass" layoutX="216.0" layoutY="145.0" prefHeight="17.0" prefWidth="192.0" text="ПАРОЛИ НЕ СОВПАДАЮТ!" textFill="RED" />
    </children>
 </AnchorPane>
