--- a/src/mygpsx/FXEditShip.fxml
+++ b/src/mygpsx/FXEditShip.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CEditShipController">
    <children>
-      <Button layoutX="479.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnAddShip" prefHeight="30.0" prefWidth="110.0" text="Добавить" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <Button layoutX="479.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnRefreshShip" prefHeight="30.0" prefWidth="110.0" text="Обновить" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Введите название судна" />
       <Label layoutX="14.0" layoutY="59.0" text="Ответственное лицо ФИО" />
       <TextField fx:id="fxLbNameShip" layoutX="14.0" layoutY="28.0" prefHeight="22.0" prefWidth="192.0" promptText="Введите название судна" />
